--- a/Menu.html
+++ b/Menu.html
@@ -105,13 +105,13 @@
 <script>
 	document.querySelectorAll('#oriental').forEach(button =>{
 		button.addEventListener('click', () => {
-			window.location='oriental.html';
+			window.location='https://htmlpreview.github.io/?https://github.com/aicait/Dmenu/blob/main/oriental.html';
 		});
 	});
 	
 	document.querySelectorAll('#oxidental').forEach(button =>{
 		button.addEventListener('click', () => {
-			window.location='oxidental.html';
+			window.location='https://htmlpreview.github.io/?https://github.com/aicait/Dmenu/blob/main/oxidental.html';
 		});
 	});
 </script>
