--- a/oriental.html
+++ b/oriental.html
@@ -126,19 +126,23 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">فول بالطحينة</div>
-			<div class="divrowr">28.000</div>
+			<div class="divrowr">33.000</div>
 			<br>
 			<div class="divrowl">ماليزية</div>
-			<div class="divrowr">34.000</div>
+			<div class="divrowr">65.000</div>
 			<br>
 			<div class="divrowl">فتة</div>
-			<div class="divrowr">49.000</div>
+			<div class="divrowr">55.000</div>
 			<br>
 			<div class="divrowl">حمص حب</div>
-			<div class="divrowr">27.000</div>
+			<div class="divrowr">33.000</div>
 			<br>
 			<div class="divrowl">فول بحامض</div>
-			<div class="divrowr">28.000</div>
+			<div class="divrowr">33.000</div>
+			<br>
+			<div class="divrowl">حمص ناعم مع اللحمة المفرومة</div>
+			<div class="divrowr">58.000</div>
+			<br>
 			
 		</div>
 
