--- a/oxidental.html
+++ b/oxidental.html
@@ -77,31 +77,31 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Meat Burger</div>
-			<div class="divrowr">133.000</div>
+			<div class="divrowr">124.000</div>
 			<br>
 			<div class="divrowl">Double Meat Burger</div>
-			<div class="divrowr">196.000</div>
+			<div class="divrowr">175.000</div>
 			<br>
 			<div class="divrowl">Swiss Mushroom Burger</div>
-			<div class="divrowr">147.000</div>
+			<div class="divrowr">177.000</div>
 			<br>
 			<div class="divrowl">Double Swiss Mushroom Burger</div>
-			<div class="divrowr">202.000</div>
+			<div class="divrowr">205.000</div>
 			<br>
 			<div class="divrowl">Chicken Burger</div>
-			<div class="divrowr">99.000</div>
+			<div class="divrowr">97.000</div>
 			<br>
 			<div class="divrowl">Double Chicken Burger</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowr">115.000</div>
 			<br>
 			<div class="divrowl">Swiss Mushroom Chicken Burger</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowr">114.000</div>
 			<br>
 			<div class="divrowl">Double Swiss Mushroom Chicken Burger</div>
-			<div class="divrowr">118.000</div>
+			<div class="divrowr">163.000</div>
 			<br>
 			<div class="divrowl">Chicken Breast Burger</div>
-			<div class="divrowr">105000</div>
+			<div class="divrowr">110.000</div>
 			
 		</div>
 		
@@ -110,55 +110,55 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Crispy</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowr">117.000</div>
 			<br>
 			<div class="divrowl">Nuggets</div>
-			<div class="divrowr">73.000</div>
-			<br>
-			<div class="divrowl">Chicken Popcorn</div>
-			<div class="divrowr">58.000</div>
-			<br>
-			<div class="divrowl">Chicken Escalope</div>
-			<div class="divrowr">87.000</div>
-			<br>
-			<div class="divrowl">Cordon Bleu</div>
-			<div class="divrowr">112.000</div>
-			<br>
-			<div class="divrowl">Chicken Pesto</div>
-			<div class="divrowr">118.000</div>
-			<br>
-			<div class="divrowl">Grilled Steak</div>
-			<div class="divrowr">152.000</div>
-			<br>
-			<div class="divrowl">Mushroom Meat Steak</div>
-			<div class="divrowr">208.000</div>
-			<br>
-			<div class="divrowl">Mushroom Chicken Breast</div>
-			<div class="divrowr">157.000</div>
-			<br>
-			<div class="divrowl">Chicken Breast</div>
 			<div class="divrowr">86.000</div>
 			<br>
+			<div class="divrowl">Chicken Popcorn</div>
+			<div class="divrowr">75.000</div>
+			<br>
+			<div class="divrowl">Chicken Escalope</div>
+			<div class="divrowr">114.000</div>
+			<br>
+			<div class="divrowl">Cordon Bleu</div>
+			<div class="divrowr">131.000</div>
+			<br>
+			<div class="divrowl">Chicken Pesto</div>
+			<div class="divrowr">78.000</div>
+			<br>
+			<div class="divrowl">Grilled Steak</div>
+			<div class="divrowr">140.000</div>
+			<br>
+			<div class="divrowl">Mushroom Meat Steak</div>
+			<div class="divrowr">250.000</div>
+			<br>
+			<div class="divrowl">Mushroom Chicken Breast</div>
+			<div class="divrowr">198.000</div>
+			<br>
+			<div class="divrowl">Chicken Breast</div>
+			<div class="divrowr">85.000</div>
+			<br>
 			<div class="divrowl">Rosemary Chicken Breast</div>
-			<div class="divrowr">80.000</div>
+			<div class="divrowr">97.000</div>
 			<br>
 			<div class="divrowl">Sauted Vegetables</div>
-			<div class="divrowr">60.000</div>
+			<div class="divrowr">110.000</div>
 			<br>
 			<div class="divrowl">Sojok</div>
-			<div class="divrowr">177.000</div>
+			<div class="divrowr">127.000</div>
 			<br>
 			<div class="divrowl">Kafta</div>
-			<div class="divrowr">179.000</div>
+			<div class="divrowr">130.000</div>
 			<br>
 			<div class="divrowl">Sawda</div>
-			<div class="divrowr">173.000</div>
+			<div class="divrowr">109.000</div>
 			<br>
 			<div class="divrowl">Tawouk</div>
 			<div class="divrowr">147.000</div>
 			<br>
 			<div class="divrowl">Shawarma</div>
-			<div class="divrowr">91.000</div>
+			<div class="divrowr">83.000</div>
 		</div>
 
 <div class="accordion__button">Sandwiches</div>
@@ -166,87 +166,90 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Potato</div>
-			<div class="divrowr">32.000</div>
+			<div class="divrowr">35.000</div>
 			<br>
 			<div class="divrowl">Chicken</div>
 			<div class="divrowr">56.000</div>
 			<br>
 			<div class="divrowl">Crispy</div>
-			<div class="divrowr">33.000</div>
+			<div class="divrowr">57.000</div>
 			<br>
 			<div class="divrowl">Sojok</div>
-			<div class="divrowr">88.000</div>
+			<div class="divrowr">57.000</div>
 			<br>
 			<div class="divrowl">Kafta</div>
-			<div class="divrowr">78.000</div>
+			<div class="divrowr">77.000</div>
 			<br>
 			<div class="divrowl">Sawda</div>
-			<div class="divrowr">79.000</div>
+			<div class="divrowr">43.000</div>
 			<br>
 			<div class="divrowl">Fajita</div>
-			<div class="divrowr">67.000</div>
+			<div class="divrowr">80.000</div>
 			<br>
 			<div class="divrowl">Tawouk</div>
-			<div class="divrowr">58.000</div>
+			<div class="divrowr">57.000</div>
 			<br>
 			<div class="divrowl">Shawarma</div>
-			<div class="divrowr">54.000</div>
+			<div class="divrowr">44.000</div>
+			<br>
+			<div class="divrowl">Smake Harra</div>
+			<div class="divrowr">55.000</div>
 			<br>
 			<div class="divrowl">Philadelphia</div>
-			<div class="divrowr">95.000</div>
+			<div class="divrowr">102.000</div>
 			<br>
 			<div class="divrowl">Tacos Meat</div>
-			<div class="divrowr">130.000</div>
+			<div class="divrowr">159.000</div>
 			<br>
 			<div class="divrowl">Tacos Chicken</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowr">105.000</div>
 			<br>
 			<div class="divrowl">Meat Quesadilla</div>
-			<div class="divrowr">192.000</div>
+			<div class="divrowr">137.000</div>
 			<br>
 			<div class="divrowl">Chicken Quesadilla</div>
-			<div class="divrowr">126.000</div>
+			<div class="divrowr">124.000</div>
 			<br>
 			<div class="divrowl">Vegetables Quesadilla</div>
-			<div class="divrowr">95.000</div>
+			<div class="divrowr">83.000</div>
 		</div>
 <div class="accordion__button">Pasta</div>
 	
 		<div class="accordion__content">
 	
 			<div class="divrowl">Broccoli</div>
-			<div class="divrowr">126.000</div>
+			<div class="divrowr">97.000</div>
 			<br>
 			<div class="divrowl">Penne Arrabbiata</div>
-			<div class="divrowr">68.000</div>
+			<div class="divrowr">53.000</div>
 			<br>
 			<div class="divrowl">Pink Sauce</div>
-			<div class="divrowr">65.000</div>
+			<div class="divrowr">64.000</div>
 			<br>
 			<div class="divrowl">Pesto</div>
-			<div class="divrowr">155.000</div>
+			<div class="divrowr">75.000</div>
 			<br>
 			<div class="divrowl">Bolognese</div>
-			<div class="divrowr">114.000</div>
+			<div class="divrowr">76.000</div>
 			<br>
 			<div class="divrowl">Primavera</div>
 			<div class="divrowr">77.000</div>
 			<br>
 			<div class="divrowl">Lasagne Bolognese</div>
-			<div class="divrowr">155.000</div>
+			<div class="divrowr">194.000</div>
 			<br>
 			<div class="divrowl">Fettuccine Alfredo</div>
-			<div class="divrowr">74.000</div>		
+			<div class="divrowr">100.000</div>		
 		</div>
 <div class="accordion__button">Wings</div>
 	
 		<div class="accordion__content">
 	
 			<div class="divrowl">Buffalo Wings</div>
-			<div class="divrowr">49.000</div>
+			<div class="divrowr">79.000</div>
 			<br>
 			<div class="divrowl">Barbecue Wings</div>
-			<div class="divrowr">49.000</div>
+			<div class="divrowr">79.000</div>
 					
 		</div>	
 <div class="accordion__button">Salad</div>
@@ -254,10 +257,10 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Cesar Salad</div>
-			<div class="divrowr">74.000</div>
+			<div class="divrowr">67.000</div>
 			<br>
 			<div class="divrowl">Pasta Salad</div>
-			<div class="divrowr">68.000</div>
+			<div class="divrowr">73.000</div>
 					
 		</div>	
 <div class="accordion__button">Others</div>
@@ -268,13 +271,13 @@
 			<div class="divrowr">25.000</div>
 			<br>
 			<div class="divrowl">Fries</div>
-			<div class="divrowr">45.000</div>
+			<div class="divrowr">51.000</div>
 			<br>
 			<div class="divrowl">Potato Puree</div>
 			<div class="divrowr">33.000</div>
 			<br>
 			<div class="divrowl">Potato Wedges</div>
-			<div class="divrowr">22.000</div>
+			<div class="divrowr">37.000</div>
 			<br>
 			<div class="divrowl">Soft Drinks</div>
 			<div class="divrowr">15.000</div>		
