--- a/oriental.html
+++ b/oriental.html
@@ -131,7 +131,7 @@
 			<div class="divrowl">ماليزية</div>
 			<div class="divrowr">65.000</div>
 			<br>
-			<div class="divrowl">فتة</div>
+			<div class="divrowl">فتة مع المكسرات</div>
 			<div class="divrowr">55.000</div>
 			<br>
 			<div class="divrowl">حمص حب</div>
@@ -151,16 +151,16 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">دزينة لحم بعجين</div>
-			<div class="divrowr">168.000</div>
+			<div class="divrowr">106.000</div>
 			<br>
 			<div class="divrowl">دزينة سمبوسك لحمة</div>
-			<div class="divrowr">154.000</div>
+			<div class="divrowr">92.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات زعتر</div>
-			<div class="divrowr">52.000</div>
+			<div class="divrowr">55.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات قريشة</div>
-			<div class="divrowr">94.000</div>
+			<div class="divrowr">92.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات سلق</div>
 			<div class="divrowr">92.000</div>
@@ -182,7 +182,7 @@
 		<div class="accordion__content_daily" id="Monday">
 	
 			<div class="divrowl">ورق عنب باللحمة</div>
-			<div class="divrowr">154.000</div>
+			<div class="divrowr">123.000</div>
 			<br>
 			<div class="divrowl">دجاج مقلي مع البطاطا</div>
 			<div class="divrowr">93.000</div>
@@ -195,65 +195,65 @@
 		<div class="accordion__content_daily" id="tuesday">
 	
 			<div class="divrowl">بفتاك مع البطاطا</div>
-			<div class="divrowr">129.000</div>
+			<div class="divrowr">104.000</div>
 			<br>
 			<div class="divrowl">قوانص مع البطاطا</div>
 			<div class="divrowr">71.000</div>
 			<br>
 			<div class="divrowl">لوبية بالزيت مع سلطة</div>
-			<div class="divrowr">45.000</div>
+			<div class="divrowr">49.000</div>
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="wednesday">
 	
 			<div class="divrowl">بطاطا على اللحمة المفرومة مع اللبن</div>
-			<div class="divrowr">72.000</div>
+			<div class="divrowr">73.000</div>
 			<br>
 			<div class="divrowl">جوانح مع الكزبرة والثوم</div>
-			<div class="divrowr">47.000</div>
+			<div class="divrowr">90.000</div>
 			<br>
 			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr">56.000</div>
+			<div class="divrowr">60.000</div>
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
 			<div class="divrowl">ملفوف بدبس الرمان مع الخضار</div>
-			<div class="divrowr">85.000</div>
+			<div class="divrowr">69.000</div>
 			<br>
 			<div class="divrowl">منسف دجاج</div>
-			<div class="divrowr">96.000</div>
+			<div class="divrowr">84.000</div>
 			<br>
 			<div class="divrowl">عجة مع اللبن</div>
-			<div class="divrowr">62.000</div>
+			<div class="divrowr">50.000</div>
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="friday">
 	
 			<div class="divrowl">ورق عنب باللحمة مع اللبن</div>
-			<div class="divrowr">154.000</div>
+			<div class="divrowr">123.000</div>
 			<br>
 			<div class="divrowl">شاورما دجاج مع كبيس</div>
-			<div class="divrowr">91.000</div>
+			<div class="divrowr">104.000</div>
 			<br>
 			<div class="divrowl">بطاطا مسلوقة مع اللبن</div>
-			<div class="divrowr">57.000</div>
+			<div class="divrowr">51.000</div>
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="saturday">
 	
 			<div class="divrowl">سجق مع الكبيس</div>
-			<div class="divrowr">177.000</div>
+			<div class="divrowr">127.000</div>
 			<br>
 			<div class="divrowl">مقلوبة باذنجان مع اللبن</div>
-			<div class="divrowr">77.000</div>
+			<div class="divrowr">59.000</div>
 			<br>
 			<div class="divrowl">بطاطا مع الكزبرة مع الخضار</div>
-			<div class="divrowr">38.000</div>
+			<div class="divrowr">36.000</div>
 			
 			
 		</div>
@@ -267,49 +267,49 @@
 			<div class="divrowr">37.000</div>
 			<br>
 			<div class="divrowl">عجة</div>
-			<div class="divrowr">62.000</div>
+			<div class="divrowr">50.000</div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
-			<div class="divrowr">71.000</div>
+			<div class="divrowr">61.000</div>
 			<br>
 			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr">56.000</div>
+			<div class="divrowr">50.000</div>
 			<br>
 			<div class="divrowl">سلق بلوبية</div>
-			<div class="divrowr">65.000</div>
+			<div class="divrowr">57.000</div>
 			<br>
 			<div class="divrowl">بطاطا علحمة مفرومة</div>
-			<div class="divrowr">60.000</div>
+			<div class="divrowr">73.000</div>
 			<br>
 			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr">59.000</div>
+			<div class="divrowr">70.000</div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
-			<div class="divrowr">85.000</div>
+			<div class="divrowr">69.000</div>
 			<br>
 			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr">63.000</div>
+			<div class="divrowr">53.000</div>
 			<br>
 			<div class="divrowl">مطبق باذنجان/خضار</div>
-			<div class="divrowr">52.000</div>
+			<div class="divrowr">43.000</div>
 			<br>
 			<div class="divrowl">دجاج بالصينية</div>
-			<div class="divrowr">100.000</div>
+			<div class="divrowr">74.000</div>
 			<br>
 			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr">44.000</div>
+			<div class="divrowr">29.000</div>
 			<br>
 			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr">39.000</div>
+			<div class="divrowr">28.000</div>
 			<br>
 			<div class="divrowl">مقالي مشكل</div>
-			<div class="divrowr">45.000</div>
+			<div class="divrowr">54.000</div>
 			<br>
 			<div class="divrowl">مسقعة باذنجان</div>
-			<div class="divrowr">48.000</div>
+			<div class="divrowr">41.000</div>
 			<br>
 			<div class="divrowl">كبيبات مقلية مع لبن</div>
-			<div class="divrowr">48.000</div>	
+			<div class="divrowr">74.000</div>	
 		</div>
 
 
@@ -318,25 +318,25 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">خيار باللبن</div>
-			<div class="divrowr">37.000</div>
+			<div class="divrowr">29.000</div>
 			<br>
 			<div class="divrowl">سلطة زعتر</div>
-			<div class="divrowr">35.000</div>
+			<div class="divrowr">29.000</div>
 			<br>
 			<div class="divrowl">سلطة روكا</div>
-			<div class="divrowr">27.000</div>
+			<div class="divrowr">32.000</div>
 			<br>
 			<div class="divrowl">سلطة خضار</div>
-			<div class="divrowr">58.000</div>
+			<div class="divrowr">45.000</div>
 			<br>
 			<div class="divrowl">فتوش</div>
-			<div class="divrowr">63.000</div>
+			<div class="divrowr">43.000</div>
 			<br>
 			<div class="divrowl">سلطة ملفوف</div>
-			<div class="divrowr">335.000</div>
+			<div class="divrowr">37.000</div>
 			<br>
 			<div class="divrowl">تبولة</div>
-			<div class="divrowr">70.000</div>
+			<div class="divrowr"></div>
 			
 		</div>
 
