--- a/oriental.html
+++ b/oriental.html
@@ -150,7 +150,7 @@
 	
 		<div class="accordion__content">
 	
-			<div class="divrowl">دزينة لحم بعجين</div>
+			<div class="divrowl">دزينة لحم بعجين قرص صغير</div>
 			<div class="divrowr">106.000</div>
 			<br>
 			<div class="divrowl">دزينة سمبوسك لحمة</div>
@@ -173,6 +173,7 @@
 			<br>
 			<div class="divrowl">لحمة بعجين قرص كبير</div>
 			<div class="divrowr">20.000</div>
+			
 			
 		</div>
 
@@ -310,6 +311,9 @@
 			<br>
 			<div class="divrowl">كبيبات مقلية مع لبن</div>
 			<div class="divrowr">74.000</div>	
+			<br>
+			<div class="divrowl">أقراص كبة</div>
+			<div class="divrowr">14.000</div>
 		</div>
 
 
