--- a/oxidental.html
+++ b/oxidental.html
@@ -192,7 +192,7 @@
 			<div class="divrowl">Shawarma</div>
 			<div class="divrowr">44.000</div>
 			<br>
-			<div class="divrowl">Smake Harra</div>
+			<div class="divrowl">Samke Harra</div>
 			<div class="divrowr">55.000</div>
 			<br>
 			<div class="divrowl">Philadelphia</div>
@@ -227,7 +227,7 @@
 			<div class="divrowr">64.000</div>
 			<br>
 			<div class="divrowl">Pesto</div>
-			<div class="divrowr">75.000</div>
+			<div class="divrowr">99.000</div>
 			<br>
 			<div class="divrowl">Bolognese</div>
 			<div class="divrowr">76.000</div>
