--- a/Menu.html
+++ b/Menu.html
@@ -91,10 +91,10 @@
 
 
 		
-<div class="accordion__button" id="oxidental-غربي"><a href="https://htmlpreview.github.io/?https://github.com/aicait/Dmenu/blob/main/oxidental.html">OXIDENTAL-غربي</a></div>
+<div class="accordion__button" id="oxidental"><a href="https://htmlpreview.github.io/?https://github.com/aicait/Dmenu/blob/main/oxidental.html">OXIDENTAL-غربي</a></div>
 	
 
-<div class="accordion__button" id="oriental-شرقي"><a href="https://htmlpreview.github.io/?https://github.com/aicait/Dmenu/blob/main/oriental.html">ORIENTAL-شرقي</a></div>
+<div class="accordion__button" id="oriental"><a href="https://htmlpreview.github.io/?https://github.com/aicait/Dmenu/blob/main/oriental.html">ORIENTAL-شرقي</a></div>
 	
 		
 	
