--- a/oxidental.html
+++ b/oxidental.html
@@ -256,7 +256,7 @@
 	
 		<div class="accordion__content">
 	
-			<div class="divrowl">Cesar Salad</div>
+			<div class="divrowl">Caesar Salad</div>
 			<div class="divrowr">67.000</div>
 			<br>
 			<div class="divrowl">Pasta Salad</div>
