--- a/oriental.html
+++ b/oriental.html
@@ -132,7 +132,7 @@
 			<div class="divrowr">65.000</div>
 			<br>
 			<div class="divrowl">فتة مع المكسرات</div>
-			<div class="divrowr">55.000</div>
+			<div class="divrowr">54.000</div>
 			<br>
 			<div class="divrowl">حمص حب</div>
 			<div class="divrowr">33.000</div>
@@ -141,7 +141,7 @@
 			<div class="divrowr">33.000</div>
 			<br>
 			<div class="divrowl">حمص ناعم مع اللحمة المفرومة</div>
-			<div class="divrowr">58.000</div>
+			<div class="divrowr">70.000</div>
 			<br>
 			
 		</div>
@@ -151,13 +151,13 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">دزينة لحم بعجين قرص صغير</div>
-			<div class="divrowr">106.000</div>
+			<div class="divrowr">146.000</div>
 			<br>
 			<div class="divrowl">دزينة سمبوسك لحمة</div>
 			<div class="divrowr">92.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات زعتر</div>
-			<div class="divrowr">55.000</div>
+			<div class="divrowr">43.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات قريشة</div>
 			<div class="divrowr">114.000</div>
@@ -166,10 +166,10 @@
 			<div class="divrowr">92.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات جبنة</div>
-			<div class="divrowr">116.000</div>
+			<div class="divrowr">160.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات محمرة</div>
-			<div class="divrowr">49.000</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص كبير</div>
 			<div class="divrowr">20.000</div>
@@ -182,85 +182,64 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">ورق عنب باللحمة</div>
-			<div class="divrowr">123.000</div>
+			<div class="divrowl">دجاج بالكاري والارز الابيض</div>
+			<div class="divrowr">98.000</div>
 			<br>
-			<div class="divrowl">دجاج مقلي مع البطاطا</div>
-			<div class="divrowr">93.000</div>
-			<br>
-			<div class="divrowl">قرنبيط بالطحينية</div>
-			<div class="divrowr">45.000</div>
+			
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">بفتاك مع البطاطا</div>
-			<div class="divrowr">104.000</div>
+			<div class="divrowl">بطاطا باللحمة مع الفطر والمكسرات</div>
+			<div class="divrowr">68.000</div>
 			<br>
-			<div class="divrowl">قوانص مع البطاطا</div>
-			<div class="divrowr">71.000</div>
-			<br>
-			<div class="divrowl">لوبية بالزيت مع سلطة</div>
-			<div class="divrowr">49.000</div>
+			
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">بطاطا على اللحمة المفرومة مع اللبن</div>
-			<div class="divrowr">73.000</div>
+			<div class="divrowl">منسف بالدجاج واللبن</div>
+			<div class="divrowr">89.000</div>
 			<br>
-			<div class="divrowl">جوانح مع الكزبرة والثوم</div>
-			<div class="divrowr">90.000</div>
-			<br>
-			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr">60.000</div>
+			
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">ملفوف بدبس الرمان مع الخضار</div>
-			<div class="divrowr">69.000</div>
+			<div class="divrowl">فوارغ محشي</div>
+			<div class="divrowr"></div>
 			<br>
-			<div class="divrowl">منسف دجاج</div>
-			<div class="divrowr">84.000</div>
+			<div class="divrowl">لوبية بزيت</div>
+			<div class="divrowr">62.000</div>
 			<br>
-			<div class="divrowl">عجة مع اللبن</div>
-			<div class="divrowr">50.000</div>
+			
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">ورق عنب باللحمة مع اللبن</div>
-			<div class="divrowr">123.000</div>
+			<div class="divrowl">كفتة بالصينية مع الأرز</div>
+			<div class="divrowr">112.000</div>
 			<br>
-			<div class="divrowl">شاورما دجاج مع كبيس</div>
-			<div class="divrowr">104.000</div>
-			<br>
-			<div class="divrowl">بطاطا مسلوقة مع اللبن</div>
-			<div class="divrowr">51.000</div>
+			
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">سجق مع الكبيس</div>
-			<div class="divrowr">127.000</div>
+			<div class="divrowl">سبانغ مع الأرز</div>
+			<div class="divrowr">79.000</div>
 			<br>
-			<div class="divrowl">مقلوبة باذنجان مع اللبن</div>
-			<div class="divrowr">59.000</div>
-			<br>
-			<div class="divrowl">بطاطا مع الكزبرة مع الخضار</div>
-			<div class="divrowr">36.000</div>
+			
 			
 			
 		</div>
 		
 
-<div class="accordion__button">ع طبلك</div>
+<div class="accordion__button">ع طلبك</div>
 	
 		<div class="accordion__content">
 	
