--- a/oriental.html
+++ b/oriental.html
@@ -244,31 +244,31 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">مغربية</div>
-			<div class="divrowr">37.000</div>
+			<div class="divrowr">52.000</div>
 			<br>
 			<div class="divrowl">عجة</div>
-			<div class="divrowr">50.000</div>
+			<div class="divrowr">62.000</div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
-			<div class="divrowr">61.000</div>
+			<div class="divrowr">65.000</div>
 			<br>
 			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr">50.000</div>
+			<div class="divrowr">68.000</div>
 			<br>
 			<div class="divrowl">سلق بلوبية</div>
 			<div class="divrowr">57.000</div>
 			<br>
 			<div class="divrowl">بطاطا علحمة مفرومة</div>
-			<div class="divrowr">73.000</div>
+			<div class="divrowr">75.000</div>
 			<br>
 			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr">70.000</div>
+			<div class="divrowr">74.000</div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
-			<div class="divrowr">69.000</div>
+			<div class="divrowr">74.000</div>
 			<br>
 			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr">53.000</div>
+			<div class="divrowr">62.000</div>
 			<br>
 			<div class="divrowl">مطبق باذنجان/خضار</div>
 			<div class="divrowr">43.000</div>
@@ -277,22 +277,22 @@
 			<div class="divrowr">74.000</div>
 			<br>
 			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr">29.000</div>
+			<div class="divrowr">40.000</div>
 			<br>
 			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr">28.000</div>
+			<div class="divrowr">40.000</div>
 			<br>
 			<div class="divrowl">مقالي مشكل</div>
-			<div class="divrowr">54.000</div>
+			<div class="divrowr">56.000</div>
 			<br>
 			<div class="divrowl">مسقعة باذنجان</div>
 			<div class="divrowr">41.000</div>
 			<br>
 			<div class="divrowl">كبيبات مقلية مع لبن</div>
-			<div class="divrowr">74.000</div>	
+			<div class="divrowr">79.000</div>	
 			<br>
 			<div class="divrowl">أقراص كبة</div>
-			<div class="divrowr">14.000</div>
+			<div class="divrowr">16.000</div>
 		</div>
 
 
@@ -307,7 +307,7 @@
 			<div class="divrowr">29.000</div>
 			<br>
 			<div class="divrowl">سلطة روكا</div>
-			<div class="divrowr">32.000</div>
+			<div class="divrowr">35.000</div>
 			<br>
 			<div class="divrowl">سلطة خضار</div>
 			<div class="divrowr">45.000</div>
@@ -319,7 +319,7 @@
 			<div class="divrowr">37.000</div>
 			<br>
 			<div class="divrowl">تبولة</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">46.000</div>
 			
 		</div>
 
@@ -335,6 +335,9 @@
 			<div class="divrowfull">اقراص كبة</div>
 			<br>
 			<div class="divrowfull">كبة نية</div>
+			<br>
+			<div class="divrowfull">طبخة سلق ملفوف مع ضلع بطحينة</div>
+			<div class="divrowr">210.000</div>
 					
 		</div>	
 	
