--- a/oxidental.html
+++ b/oxidental.html
@@ -101,7 +101,7 @@
 			<div class="divrowr">163.000</div>
 			<br>
 			<div class="divrowl">Chicken Breast Burger</div>
-			<div class="divrowr">110.000</div>
+			<div class="divrowr">107.000</div>
 			
 		</div>
 		
@@ -131,10 +131,10 @@
 			<div class="divrowr">140.000</div>
 			<br>
 			<div class="divrowl">Mushroom Meat Steak</div>
-			<div class="divrowr">250.000</div>
+			<div class="divrowr">183.000</div>
 			<br>
 			<div class="divrowl">Mushroom Chicken Breast</div>
-			<div class="divrowr">198.000</div>
+			<div class="divrowr">122.000</div>
 			<br>
 			<div class="divrowl">Chicken Breast</div>
 			<div class="divrowr">85.000</div>
@@ -155,10 +155,10 @@
 			<div class="divrowr">109.000</div>
 			<br>
 			<div class="divrowl">Tawouk</div>
-			<div class="divrowr">147.000</div>
+			<div class="divrowr">143.000</div>
 			<br>
 			<div class="divrowl">Shawarma</div>
-			<div class="divrowr">83.000</div>
+			<div class="divrowr">92.000</div>
 		</div>
 
 <div class="accordion__button">Sandwiches</div>
@@ -172,28 +172,28 @@
 			<div class="divrowr">56.000</div>
 			<br>
 			<div class="divrowl">Crispy</div>
-			<div class="divrowr">57.000</div>
+			<div class="divrowr">62.000</div>
 			<br>
 			<div class="divrowl">Sojok</div>
-			<div class="divrowr">57.000</div>
+			<div class="divrowr">66.000</div>
 			<br>
 			<div class="divrowl">Kafta</div>
-			<div class="divrowr">77.000</div>
+			<div class="divrowr">86.000</div>
 			<br>
 			<div class="divrowl">Sawda</div>
-			<div class="divrowr">43.000</div>
+			<div class="divrowr">60.000</div>
 			<br>
 			<div class="divrowl">Fajita</div>
 			<div class="divrowr">80.000</div>
 			<br>
-			<div class="divrowl">Tawouk</div>
-			<div class="divrowr">57.000</div>
+			<div class="divrowl">Tawouk O&O</div>
+			<div class="divrowr">61.000</div>
 			<br>
 			<div class="divrowl">Shawarma</div>
-			<div class="divrowr">44.000</div>
+			<div class="divrowr">52.000</div>
 			<br>
 			<div class="divrowl">Samke Harra</div>
-			<div class="divrowr">55.000</div>
+			<div class="divrowr">56.000</div>
 			<br>
 			<div class="divrowl">Philadelphia</div>
 			<div class="divrowr">102.000</div>
@@ -202,7 +202,7 @@
 			<div class="divrowr">159.000</div>
 			<br>
 			<div class="divrowl">Tacos Chicken</div>
-			<div class="divrowr">105.000</div>
+			<div class="divrowr">104.000</div>
 			<br>
 			<div class="divrowl">Meat Quesadilla</div>
 			<div class="divrowr">137.000</div>
@@ -218,7 +218,7 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Broccoli</div>
-			<div class="divrowr">97.000</div>
+			<div class="divrowr">91.000</div>
 			<br>
 			<div class="divrowl">Penne Arrabbiata</div>
 			<div class="divrowr">53.000</div>
@@ -239,7 +239,20 @@
 			<div class="divrowr">194.000</div>
 			<br>
 			<div class="divrowl">Fettuccine Alfredo</div>
-			<div class="divrowr">100.000</div>		
+			<div class="divrowr">100.000</div>
+			<br>
+			<div class="divrowl">Four Cheese</div>
+			<div class="divrowr">200.000</div>
+			<br>
+			<div class="divrowl">Pasta Salad</div>
+			<div class="divrowr">73.000</div>
+			<br>
+			<div class="divrowl">Penne Pasta Salad</div>
+			<div class="divrowr">77.000</div>
+			<br>
+			<div class="divrowl">Tuna Pasta</div>
+			<div class="divrowr">89.000</div>
+			
 		</div>
 <div class="accordion__button">Wings</div>
 	
@@ -261,6 +274,12 @@
 			<br>
 			<div class="divrowl">Pasta Salad</div>
 			<div class="divrowr">73.000</div>
+			<br>
+			<div class="divrowl">Brocoli</div>
+			<div class="divrowr">77.000</div>
+			<br>
+			<div class="divrowl">Tuna Pasta</div>
+			<div class="divrowr">89.000</div>
 					
 		</div>	
 <div class="accordion__button">Others</div>
@@ -277,10 +296,10 @@
 			<div class="divrowr">33.000</div>
 			<br>
 			<div class="divrowl">Potato Wedges</div>
-			<div class="divrowr">37.000</div>
+			<div class="divrowr">39.000</div>
 			<br>
 			<div class="divrowl">Soft Drinks</div>
-			<div class="divrowr">15.000</div>		
+			<div class="divrowr">16.000</div>		
 		</div>	
 
 
