--- a/oriental.html
+++ b/oriental.html
@@ -182,14 +182,23 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">دجاج بالكاري والارز الابيض</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowl">شاكرية باللبن مع الرز</div>
+			<div class="divrowr">73.000</div>
 			<br>
 			
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
+	
+			<div class="divrowl">كوسى باللبن</div>
+			<div class="divrowr">82.000</div>
+			<br>
+			
+			
+			
+		</div>
+		<div class="accordion__content_daily" id="Wednesday">
 	
 			<div class="divrowl">بطاطا باللحمة مع الفطر والمكسرات</div>
 			<div class="divrowr">68.000</div>
@@ -198,22 +207,10 @@
 			
 			
 		</div>
-		<div class="accordion__content_daily" id="Wednesday">
-	
-			<div class="divrowl">منسف بالدجاج واللبن</div>
-			<div class="divrowr">89.000</div>
-			<br>
-			
-			
-			
-		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">فوارغ محشي</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">لوبية بزيت</div>
-			<div class="divrowr">150.000</div>
+			<div class="divrowl">صيادية سمك</div>
+			<div class="divrowr">91.000</div>
 			<br>
 			
 			
@@ -221,8 +218,11 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">كفتة بالصينية مع الأرز</div>
-			<div class="divrowr">112.000</div>
+			<div class="divrowl">فوارغ محشي</div>
+			<div class="divrowr">105.000</div>
+			<br>
+			<div class="divrowl">لوبية بالزيت</div>
+			<div class="divrowr">49.000</div>
 			<br>
 			
 			
@@ -230,8 +230,11 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">سبانغ مع الأرز</div>
-			<div class="divrowr">79.000</div>
+			<div class="divrowl">مغربية لحمة</div>
+			<div class="divrowr"></div>
+			<br>
+			<div class="divrowl">مغربية دجاج</div>
+			<div class="divrowr">70.000</div>
 			<br>
 			
 			
