--- a/oriental.html
+++ b/oriental.html
@@ -182,8 +182,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">شاكرية باللبن مع الرز</div>
-			<div class="divrowr">73.000</div>
+			<div class="divrowl">لوبياء باللحمة</div>
+			<div class="divrowr">87.000</div>
 			<br>
 			
 			
@@ -191,8 +191,11 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">كوسى باللبن</div>
-			<div class="divrowr">82.000</div>
+			<div class="divrowl">مقلوبة باذنجان</div>
+			<div class="divrowr">75.000</div>
+			<br>
+			<div class="divrowl">بامية بالزيت</div>
+			<div class="divrowr">55.000</div>
 			<br>
 			
 			
@@ -200,8 +203,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">بطاطا باللحمة مع الفطر والمكسرات</div>
-			<div class="divrowr">68.000</div>
+			<div class="divrowl">شيخ المحاشي باللبن</div>
+			<div class="divrowr">89.000</div>
 			<br>
 			
 			
@@ -209,8 +212,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">صيادية سمك</div>
-			<div class="divrowr">91.000</div>
+			<div class="divrowl">كبة لبنية</div>
+			<div class="divrowr">82.000</div>
 			<br>
 			
 			
@@ -218,23 +221,18 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">فوارغ محشي</div>
-			<div class="divrowr">105.000</div>
+			<div class="divrowl">شيش برك مع مجدرة رز</div>
+			<div class="divrowr">92.000</div>
 			<br>
-			<div class="divrowl">لوبية بالزيت</div>
-			<div class="divrowr">49.000</div>
-			<br>
+			
 			
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">مغربية لحمة</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">مغربية دجاج</div>
-			<div class="divrowr">70.000</div>
+			<div class="divrowl">دجاج بالصينية</div>
+			<div class="divrowr">74.000</div>
 			<br>
 			
 			
@@ -246,6 +244,9 @@
 	
 		<div class="accordion__content">
 	
+			<div class="divrowl">سمكة حرة</div>
+			<div class="divrowr">84.000</div>
+			<br>
 			<div class="divrowl">مغربية</div>
 			<div class="divrowr">52.000</div>
 			<br>
