--- a/oriental.html
+++ b/oriental.html
@@ -247,6 +247,9 @@
 			<div class="divrowl">سمكة حرة</div>
 			<div class="divrowr">84.000</div>
 			<br>
+			<div class="divrowl">ورق عنب باللخمة الشرحات</div>
+			<div class="divrowr">123.000</div>
+			<br>
 			<div class="divrowl">مغربية</div>
 			<div class="divrowr">52.000</div>
 			<br>
