--- a/oriental.html
+++ b/oriental.html
@@ -182,8 +182,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">لوبياء باللحمة</div>
-			<div class="divrowr">87.000</div>
+			<div class="divrowl">داوود باشا</div>
+			<div class="divrowr">102.000</div>
 			<br>
 			
 			
@@ -191,11 +191,11 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">مقلوبة باذنجان</div>
-			<div class="divrowr">75.000</div>
+			<div class="divrowl">بفتاك مع البطاطا المسلوقة</div>
+			<div class="divrowr">111.000</div>
 			<br>
-			<div class="divrowl">بامية بالزيت</div>
-			<div class="divrowr">55.000</div>
+			<div class="divrowl">مقالي مشكل</div>
+			<div class="divrowr">56.000</div>
 			<br>
 			
 			
@@ -203,8 +203,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">شيخ المحاشي باللبن</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowl">صيادية سمك</div>
+			<div class="divrowr">91.000</div>
 			<br>
 			
 			
@@ -212,8 +212,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">كبة لبنية</div>
-			<div class="divrowr">82.000</div>
+			<div class="divrowl">ارز بالحمص مع الدجاج واللبن</div>
+			<div class="divrowr">72.000</div>
 			<br>
 			
 			
@@ -221,8 +221,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">شيش برك مع مجدرة رز</div>
-			<div class="divrowr">92.000</div>
+			<div class="divrowl">كفتة بالصينية مع الرز</div>
+			<div class="divrowr">113.000</div>
 			<br>
 			
 			
@@ -247,7 +247,7 @@
 			<div class="divrowl">سمكة حرة</div>
 			<div class="divrowr">84.000</div>
 			<br>
-			<div class="divrowl">ورق عنب باللخمة الشرحات</div>
+			<div class="divrowl">ورق عنب باللحمة</div>
 			<div class="divrowr">123.000</div>
 			<br>
 			<div class="divrowl">مغربية</div>
@@ -344,7 +344,7 @@
 			<div class="divrowfull">كبة نية</div>
 			<br>
 			<div class="divrowfull">طبخة سلق ملفوف مع ضلع بطحينة</div>
-			<div class="divrowr">210.000</div>
+			<div 
 					
 		</div>	
 	
