--- a/oriental.html
+++ b/oriental.html
@@ -182,8 +182,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">داوود باشا</div>
-			<div class="divrowr">102.000</div>
+			<div class="divrowl">شيخ المحاشي باللبن</div>
+			<div class="divrowr">89.000</div>
 			<br>
 			
 			
@@ -191,20 +191,18 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">بفتاك مع البطاطا المسلوقة</div>
-			<div class="divrowr">111.000</div>
-			<br>
-			<div class="divrowl">مقالي مشكل</div>
-			<div class="divrowr">56.000</div>
+			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowr">113.000</div>
 			<br>
 			
 			
 			
+		
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">صيادية سمك</div>
-			<div class="divrowr">91.000</div>
+			<div class="divrowl">دجاج بالكاري والارز الابيض</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			
 			
@@ -212,8 +210,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">ارز بالحمص مع الدجاج واللبن</div>
-			<div class="divrowr">72.000</div>
+			<div class="divrowl">بطاطا باللحمة مع الفطر والمكسرات</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			
 			
@@ -221,8 +219,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">كفتة بالصينية مع الرز</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowl">منسف بالدجاج واللبن</div>
+			<div class="divrowr">89.000</div>
 			<br>
 			
 			
@@ -231,10 +229,12 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">دجاج بالصينية</div>
-			<div class="divrowr">74.000</div>
+			<div class="divrowl">فوارغ محشي</div>
+			<div class="divrowr">105.000</div>
 			<br>
-			
+			<div class="divrowl">لوبية بزيت</div>
+			<div class="divrowr">62.000</div>
+			<br>
 			
 			
 		</div>
