--- a/oriental.html
+++ b/oriental.html
@@ -129,10 +129,10 @@
 			<div class="divrowr">33.000</div>
 			<br>
 			<div class="divrowl">ماليزية</div>
-			<div class="divrowr">65.000</div>
+			<div class="divrowr">66.000</div>
 			<br>
 			<div class="divrowl">فتة مع المكسرات</div>
-			<div class="divrowr">54.000</div>
+			<div class="divrowr">61.000</div>
 			<br>
 			<div class="divrowl">حمص حب</div>
 			<div class="divrowr">33.000</div>
@@ -141,9 +141,14 @@
 			<div class="divrowr">33.000</div>
 			<br>
 			<div class="divrowl">حمص ناعم مع اللحمة المفرومة</div>
-			<div class="divrowr">70.000</div>
+			<div class="divrowr">82.000</div>
 			<br>
-			
+			<div class="divrowl">حمص ناعم</div>
+			<div class="divrowr">33.000</div>
+			<br>
+			<div class="divrowl">حمص ناعم نصف كيلو</div>
+			<div class="divrowr">39.000</div>
+			<br>
 		</div>
 
 <div class="accordion__button">معجنات</div>
@@ -157,22 +162,26 @@
 			<div class="divrowr">92.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات زعتر</div>
-			<div class="divrowr">43.000</div>
+			<div class="divrowr">100.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات قريشة</div>
-			<div class="divrowr">114.000</div>
+			<div class="divrowr">130.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات سلق</div>
-			<div class="divrowr">92.000</div>
+			<div class="divrowr">120.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات جبنة</div>
-			<div class="divrowr">160.000</div>
+			<div class="divrowr">130.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات محمرة</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowr">100.000</div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص كبير</div>
 			<div class="divrowr">20.000</div>
+			<br>
+			<div class="divrowl">لحمة بعجين قرص صغير</div>
+			<div class="divrowr">12.000</div>
+			<br>
 			
 			
 		</div>
@@ -248,7 +257,7 @@
 			<div class="divrowr">84.000</div>
 			<br>
 			<div class="divrowl">ورق عنب باللحمة</div>
-			<div class="divrowr">123.000</div>
+			<div class="divrowr">126.000</div>
 			<br>
 			<div class="divrowl">مغربية</div>
 			<div class="divrowr">52.000</div>
@@ -257,37 +266,37 @@
 			<div class="divrowr">62.000</div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
-			<div class="divrowr">65.000</div>
+			<div class="divrowr">82.000</div>
 			<br>
 			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr">68.000</div>
+			<div class="divrowr">70.000</div>
 			<br>
 			<div class="divrowl">سلق بلوبية</div>
-			<div class="divrowr">57.000</div>
+			<div class="divrowr">65.000</div>
 			<br>
 			<div class="divrowl">بطاطا علحمة مفرومة</div>
-			<div class="divrowr">75.000</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr">74.000</div>
+			<div class="divrowr">76.000</div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
-			<div class="divrowr">74.000</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr">62.000</div>
+			<div class="divrowr">70.000</div>
 			<br>
 			<div class="divrowl">مطبق باذنجان/خضار</div>
 			<div class="divrowr">43.000</div>
 			<br>
 			<div class="divrowl">دجاج بالصينية</div>
-			<div class="divrowr">74.000</div>
+			<div class="divrowr">90.000</div>
 			<br>
 			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr">40.000</div>
+			<div class="divrowr">65.000</div>
 			<br>
 			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr">40.000</div>
+			<div class="divrowr">65.000</div>
 			<br>
 			<div class="divrowl">مقالي مشكل</div>
 			<div class="divrowr">56.000</div>
