--- a/oxidental.html
+++ b/oxidental.html
@@ -218,22 +218,22 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Broccoli</div>
-			<div class="divrowr">91.000</div>
+			<div class="divrowr">105.000</div>
 			<br>
 			<div class="divrowl">Penne Arrabbiata</div>
-			<div class="divrowr">53.000</div>
+			<div class="divrowr">75.000</div>
 			<br>
 			<div class="divrowl">Pink Sauce</div>
-			<div class="divrowr">64.000</div>
+			<div class="divrowr">75.000</div>
 			<br>
 			<div class="divrowl">Pesto</div>
-			<div class="divrowr">99.000</div>
+			<div class="divrowr">102.000</div>
 			<br>
 			<div class="divrowl">Bolognese</div>
-			<div class="divrowr">76.000</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">Primavera</div>
-			<div class="divrowr">77.000</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">Lasagne Bolognese</div>
 			<div class="divrowr">194.000</div>
@@ -242,16 +242,16 @@
 			<div class="divrowr">100.000</div>
 			<br>
 			<div class="divrowl">Four Cheese</div>
-			<div class="divrowr">200.000</div>
+			<div class="divrowr">205.000</div>
 			<br>
 			<div class="divrowl">Pasta Salad</div>
-			<div class="divrowr">73.000</div>
+			<div class="divrowr">75.000</div>
 			<br>
 			<div class="divrowl">Penne Pasta Salad</div>
-			<div class="divrowr">77.000</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">Tuna Pasta</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowr">95.000</div>
 			
 		</div>
 <div class="accordion__button">Wings</div>
@@ -259,10 +259,10 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Buffalo Wings</div>
-			<div class="divrowr">79.000</div>
+			<div class="divrowr">80.000</div>
 			<br>
 			<div class="divrowl">Barbecue Wings</div>
-			<div class="divrowr">79.000</div>
+			<div class="divrowr">80.000</div>
 					
 		</div>	
 <div class="accordion__button">Salad</div>
@@ -270,16 +270,16 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Caesar Salad</div>
-			<div class="divrowr">67.000</div>
+			<div class="divrowr">74.000</div>
 			<br>
 			<div class="divrowl">Pasta Salad</div>
-			<div class="divrowr">73.000</div>
+			<div class="divrowr">75.000</div>
 			<br>
-			<div class="divrowl">Brocoli</div>
-			<div class="divrowr">77.000</div>
+			<div class="divrowl">Penne Pasta Salad</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">Tuna Pasta</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowr">95.000</div>
 					
 		</div>	
 <div class="accordion__button">Others</div>
@@ -290,13 +290,13 @@
 			<div class="divrowr">25.000</div>
 			<br>
 			<div class="divrowl">Fries</div>
-			<div class="divrowr">51.000</div>
+			<div class="divrowr">60.000</div>
 			<br>
 			<div class="divrowl">Potato Puree</div>
 			<div class="divrowr">33.000</div>
 			<br>
 			<div class="divrowl">Potato Wedges</div>
-			<div class="divrowr">39.000</div>
+			<div class="divrowr">60.000</div>
 			<br>
 			<div class="divrowl">Soft Drinks</div>
 			<div class="divrowr">16.000</div>		
