--- a/oriental.html
+++ b/oriental.html
@@ -149,6 +149,12 @@
 			<div class="divrowl">حمص ناعم نصف كيلو</div>
 			<div class="divrowr">39.000</div>
 			<br>
+			<div class="divrowl">لحمة بعجين قرص صغير</div>
+			<div class="divrowr">12.000</div>
+			<br>
+			<div class="divrowl">لحمة بعجين قرص كبير</div>
+			<div class="divrowr">20.000</div>
+			<br>
 		</div>
 
 <div class="accordion__button">معجنات</div>
@@ -191,8 +197,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">شيخ المحاشي باللبن</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowl">كبة بالصينية</div>
+			<div class="divrowr">88.000</div>
 			<br>
 			
 			
@@ -200,27 +206,31 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">بفتاك مع بطاطا</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowl">مغربية باللحمة</div>
+			<div class="divrowr">88.000</div>
 			<br>
-			
+			<div class="divrowl">مغربية بالدجاج</div>
+			<div class="divrowr">74.000</div>
+			<br>
 			
 			
 		
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">دجاج بالكاري والارز الابيض</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowl">شاكرية باللبن</div>
+			<div class="divrowr">89.000</div>
 			<br>
-			
+			<div class="divrowl">هندبة بالتوم والحامض</div>
+			<div class="divrowr">51.000</div>
+			<br>
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">بطاطا باللحمة مع الفطر والمكسرات</div>
-			<div class="divrowr">85.000</div>
+			<div class="divrowl">كوسى باللبن</div>
+			<div class="divrowr">89.000</div>
 			<br>
 			
 			
@@ -228,8 +238,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">منسف بالدجاج واللبن</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowl">بطاطا على اللحمة المفرومة مع فطر ومكسرات</div>
+			<div class="divrowr">90.000</div>
 			<br>
 			
 			
@@ -238,11 +248,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">فوارغ محشي</div>
-			<div class="divrowr">105.000</div>
-			<br>
-			<div class="divrowl">لوبية بزيت</div>
-			<div class="divrowr">62.000</div>
+			<div class="divrowl">صيادية سمك مع المكسرات</div>
+			<div class="divrowr">95.000</div>
 			<br>
 			
 			
@@ -254,16 +261,16 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">سمكة حرة</div>
-			<div class="divrowr">84.000</div>
+			<div class="divrowr">86.000</div>
 			<br>
 			<div class="divrowl">ورق عنب باللحمة</div>
 			<div class="divrowr">126.000</div>
 			<br>
 			<div class="divrowl">مغربية</div>
-			<div class="divrowr">52.000</div>
+			<div class="divrowr">54.000</div>
 			<br>
 			<div class="divrowl">عجة</div>
-			<div class="divrowr">62.000</div>
+			<div class="divrowr">64.000</div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
 			<div class="divrowr">82.000</div>
@@ -274,11 +281,11 @@
 			<div class="divrowl">سلق بلوبية</div>
 			<div class="divrowr">65.000</div>
 			<br>
-			<div class="divrowl">بطاطا علحمة مفرومة</div>
-			<div class="divrowr">85.000</div>
+			<div class="divrowl">بطاطا علحمة مفرومة مع الفطر والمكسرات</div>
+			<div class="divrowr">90.000</div>
 			<br>
 			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr">76.000</div>
+			<div class="divrowr">74.000</div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
 			<div class="divrowr">85.000</div>
@@ -287,7 +294,7 @@
 			<div class="divrowr">70.000</div>
 			<br>
 			<div class="divrowl">مطبق باذنجان/خضار</div>
-			<div class="divrowr">43.000</div>
+			<div class="divrowr">45.000</div>
 			<br>
 			<div class="divrowl">دجاج بالصينية</div>
 			<div class="divrowr">90.000</div>
@@ -299,16 +306,13 @@
 			<div class="divrowr">65.000</div>
 			<br>
 			<div class="divrowl">مقالي مشكل</div>
-			<div class="divrowr">56.000</div>
+			<div class="divrowr">67.000</div>
 			<br>
 			<div class="divrowl">مسقعة باذنجان</div>
 			<div class="divrowr">41.000</div>
 			<br>
-			<div class="divrowl">كبيبات مقلية مع لبن</div>
-			<div class="divrowr">79.000</div>	
-			<br>
 			<div class="divrowl">أقراص كبة</div>
-			<div class="divrowr">16.000</div>
+			<div class="divrowr">15.000</div>
 		</div>
 
 
