--- a/oriental.html
+++ b/oriental.html
@@ -197,8 +197,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">كبة بالصينية</div>
-			<div class="divrowr">88.000</div>
+			<div class="divrowl">فوارغ محشية</div>
+			<div class="divrowr">105.000</div>
 			<br>
 			
 			
@@ -206,31 +206,30 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">مغربية باللحمة</div>
-			<div class="divrowr">88.000</div>
+			<div class="divrowl">عجة مع اللحمة المفرومة</div>
+			<div class="divrowr">85.000</div>
 			<br>
-			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr">74.000</div>
-			<br>
+			
 			
 			
 		
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">شاكرية باللبن</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowl">لوبية باللحمة مع اللبن</div>
+			<div class="divrowr">90.000</div>
 			<br>
-			<div class="divrowl">هندبة بالتوم والحامض</div>
-			<div class="divrowr">51.000</div>
-			<br>
+			
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">كوسى باللبن</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowl">مقلوبة باذنجان مع لبن</div>
+			<div class="divrowr">79.000</div>
+			<br>
+			<div class="divrowl">بامية بزيت</div>
+			<div class="divrowr">65.000</div>
 			<br>
 			
 			
@@ -238,8 +237,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">بطاطا على اللحمة المفرومة مع فطر ومكسرات</div>
-			<div class="divrowr">90.000</div>
+			<div class="divrowl">شيخ المحاشي باللبن</div>
+			<div class="divrowr">92.000</div>
 			<br>
 			
 			
@@ -248,8 +247,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">صيادية سمك مع المكسرات</div>
-			<div class="divrowr">95.000</div>
+			<div class="divrowl">كبة لبنية</div>
+			<div class="divrowr">89.000</div>
 			<br>
 			
 			
